[package]
name = "oss-vizier"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
exclude = [
    "/.github/*",
    "/.cargo/*",
    "/.gitignore",
    "/.dockerignore",
    "/Dockerfile",
    "/environment.yml",
    "/requirements.txt",
    "/run_server.py",
]
description = """
An (unofficial) async client library for OSS Vizier.
"""
homepage = "https://github.com/ssoudan/oss-vizier"
repository = "https://github.com/ssoudan/oss-vizier"
documentation = "https://docs.rs/oss-vizier"
readme = "README.md"
keywords = ["vizier", "optimization", "hyperparameter"]
categories = ["algorithms", "science"]

[features]
default = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "e2e"
path = "examples/e2e.rs"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false

[dependencies]
tonic = { version = "0.13", features = [] }
prost = "0.13"
prost-types = "0.13"
tokio = "1.47.1"
thiserror = "2.0.16"
regex = "1.11.1"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
prost-build = { version = "0.13" }